RESOLVED FIXED14544
Scroll wheel events are ignored when the cursor is over an iframe's border
https://bugs.webkit.org/show_bug.cgi?id=14544
Summary Scroll wheel events are ignored when the cursor is over an iframe's border
mitz
Reported 2007-07-06 12:30:00 PDT
When the mouse pointer is positioned over an iframe's border, the scroll wheel does not scroll the frame (if it is scrollable) nor the containing page. To reproduce, open the test case and follow the instructions.
Attachments
Test case (364 bytes, text/html)
2007-07-06 12:31 PDT, mitz
no flags
Reject scroll wheel events outside the widget's view (1.33 KB, patch)
2007-07-06 12:59 PDT, mitz
darin: review+
mitz
Comment 1 2007-07-06 12:31:00 PDT
Created attachment 15420 [details] Test case
mitz
Comment 2 2007-07-06 12:59:00 PDT
Created attachment 15421 [details] Reject scroll wheel events outside the widget's view This is the kind of change that makes me think I may be overlooking something.
mitz
Comment 3 2007-07-06 13:01:41 PDT
One thing that I'm not overlooking is that the behavior of scrollable overflows is different: when the cursor is in the border, the scroll wheel scrolls the contents of the overflow. I consider that a bug.
Darin Adler
Comment 4 2007-07-08 05:05:45 PDT
Comment on attachment 15421 [details] Reject scroll wheel events outside the widget's view r=me
Mark Rowe (bdash)
Comment 5 2007-07-08 10:42:37 PDT
Landed in r24098.
Note You need to log in before you can comment on or make changes to this bug.