2007-07-08  Mitz Pettel  <mitz@webkit.org>

Reviewed by Darin.

        - fix http://bugs.webkit.org/show_bug.cgi?id=14544
          Scroll wheel events are ignored when the cursor is over an iframe's border

        * page/mac/EventHandlerMac.mm:
        (WebCore::EventHandler::passWheelEventToWidget): Changed to return false if
        the event coordinates are not inside the widget's NSView hierarchy.


Canonical link: https://commits.webkit.org/18836@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@24098 268f45cc-cd09-0410-ab3c-d52691b4dbfc